<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/string_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generated_string"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/length_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/length_0" />

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/created_date" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete" />
</LinearLayout>
